Fix multiple users icon alignment

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -16,6 +16,7 @@ body #root .App .view .page {
             width: 82%;
 
             .answer-question-picture {
+              height: 47px;
               margin-right: -10px;
               text-align: right;
 
